--- a/InitModule/pom.xml
+++ b/InitModule/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>FileManipulationModule</artifactId>
+    <artifactId>InitModule</artifactId>
     <packaging>jar</packaging>
 
     <properties>
