--- a/IntegrationTestModule/pom.xml
+++ b/IntegrationTestModule/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
-            <artifactId>FileManipulationModule</artifactId>
+            <artifactId>InitModule</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
