--- a/entity-module/pom.xml
+++ b/entity-module/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>EntityModule</artifactId>
+    <artifactId>entity-module</artifactId>
     <packaging>jar</packaging>
 
     <properties>
