--- a/init-module/pom.xml
+++ b/init-module/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>InitModule</artifactId>
+    <artifactId>init-module</artifactId>
     <packaging>jar</packaging>
 
     <properties>
