--- a/main-app-module/pom.xml
+++ b/main-app-module/pom.xml
@@ -9,14 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>MainAppModule</artifactId>
+    <artifactId>main-app-module</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
 
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
-            <artifactId>IntegrationTestModule</artifactId>
+            <artifactId>integration-test-module</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
