--- a/service-module/pom.xml
+++ b/service-module/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ServiceModule</artifactId>
+    <artifactId>service-module</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
-            <artifactId>EntityModule</artifactId>
+            <artifactId>entity-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
