--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>init-module</module>
     <module>main-app-module</module>
     <module>dao-module</module>
+      <module>servlet-module</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -31,7 +32,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
