--- a/dao-module/pom.xml
+++ b/dao-module/pom.xml
@@ -10,13 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dao-module</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>com.kashigin.stanislav</groupId>
-            <artifactId>entity-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -26,6 +22,12 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>4.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>entity-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>import</scope>
         </dependency>
     </dependencies>
 
