--- a/dao-module/pom.xml
+++ b/dao-module/pom.xml
@@ -24,6 +24,11 @@
             <version>4.9.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.kashigin.stanislav</groupId>
             <artifactId>entity-module</artifactId>
             <version>1.0-SNAPSHOT</version>
