--- a/servlet-module/pom.xml
+++ b/servlet-module/pom.xml
@@ -14,6 +14,21 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.17</version>
+        </dependency>
+        <dependency>
             <groupId>com.kashigin.stanislav</groupId>
             <artifactId>dao-module</artifactId>
             <version>1.0-SNAPSHOT</version>
