--- a/main-app-module/pom.xml
+++ b/main-app-module/pom.xml
@@ -13,7 +13,6 @@
     <packaging>war</packaging>
 
     <dependencies>
-
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
             <artifactId>integration-test-module</artifactId>
@@ -31,6 +30,21 @@
             <artifactId>jakarta.servlet.jsp-api</artifactId>
             <version>3.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.18</version>
         </dependency>
     </dependencies>
 
