--- a/entity-module/pom.xml
+++ b/entity-module/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
