--- a/main-app-module/src/main/resources/application.properties
+++ b/main-app-module/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
