Added dto and mapper classes

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>main-app-module</module>
     <module>dao-module</module>
     <module>servlet-module</module>
+    <module>dto-module</module>
   </modules>
   <packaging>pom</packaging>
 
