--- a/controller-module/pom.xml
+++ b/controller-module/pom.xml
@@ -15,6 +15,16 @@
     <dependencies>
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>entity-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>dto-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
             <artifactId>service-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
