--- a/dto-module/pom.xml
+++ b/dto-module/pom.xml
@@ -37,6 +37,18 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>service-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>service-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
