--- a/dao-module/pom.xml
+++ b/dao-module/pom.xml
@@ -14,6 +14,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>entity-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.3.3</version>
@@ -21,18 +27,12 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.9.0</version>
+            <version>4.9.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>2.6.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.kashigin.stanislav</groupId>
-            <artifactId>entity-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>import</scope>
         </dependency>
     </dependencies>
 
