--- a/service-module/pom.xml
+++ b/service-module/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>entity-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
