Implemented security validator and secured controller methods

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>dao-module</module>
     <module>servlet-module</module>
     <module>dto-module</module>
+      <module>security-module</module>
   </modules>
   <packaging>pom</packaging>
 
