--- a/main-app-module/pom.xml
+++ b/main-app-module/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <dependency>
             <groupId>com.kashigin.stanislav</groupId>
+            <artifactId>security-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kashigin.stanislav</groupId>
             <artifactId>entity-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
